added the href links to the nav items and to the logo to link to home page

--- a/style/style.css
+++ b/style/style.css
@@ -25,6 +25,10 @@
     color: yellow;
 }
 
+a:active {
+    color: yellow;
+}
+
 .navbar-header {
     padding: 5px;
     margin-top: 6px;
@@ -332,6 +336,7 @@
         font-size: 12px;
         letter-spacing: 2px;
     }
+
     .logo {
         width: 200px;
         height: 100px;
