updating style file

--- a/style/style.css
+++ b/style/style.css
@@ -239,14 +239,13 @@
     background-color: #172C54;
     border: none;
     color: #fafafa;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .btn-success:hover {
     background-color: #172C54;
     color: #DAB664;
     transition: 500ms ease-in-out;
-
 }
 
 
@@ -305,6 +304,9 @@
     .text-center {
         background-color: #172C54;
         height: 80px;
+        margin-top: 20px;
+    }
+    .btn-success {
         margin-top: 20px;
     }
 
@@ -452,8 +454,13 @@
     }
     .awards-h1 {
         text-align: center;
-        text-align: center;
         font-size: 18px;
+    }
+    .imgage-in-mystory-page {
+        margin: 20px;
+    }
+    .mystory-p {
+        margin-left: 40px;
     }
 }
 
@@ -500,7 +507,10 @@
     .text-center {
         background-color: #172C54;
         height: 102px;
-        margin-top: 50px;
+        margin-top: 20px;
+    }
+    .btn-success {
+        margin-top: 20px;
     }
     .follow-us {
         font-size: 13px;
@@ -646,6 +656,12 @@
     .awards-h1 {
         text-align: center;
         font-size: 22px;
+    }
+    .imgage-in-mystory-page {
+        margin: 20px;
+    }
+    .mystory-p {
+        margin-left: 40px;
     }
 
 }
